insert function of the content provider + linked to the UI

--- a/app/src/main/res/layout/activity_child.xml
+++ b/app/src/main/res/layout/activity_child.xml
@@ -80,7 +80,7 @@
                  android:focusableInTouchMode="false"
                  android:textOff=""
                  android:textOn=""
-                 android:layout_weight="1" />
+                 android:onClick="OnClickAddFavorite"/>
 
                     </LinearLayout>
 
