finally the trailer and reviews appears I still need to fix the intent for youtube, and only the last review appears

--- a/app/src/main/res/layout/activity_child.xml
+++ b/app/src/main/res/layout/activity_child.xml
@@ -105,12 +105,22 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/sypnosis"
         android:textSize="16sp"
         android:padding="15dp"/>
+
+
+
+
+
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
@@ -119,16 +129,12 @@
 
     </android.support.v7.widget.RecyclerView>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        <WebView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/wv_reviews">
 
-    <WebView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/wv_reviews">
-
-    </WebView>
+        </WebView>
 
     </LinearLayout>
 </LinearLayout>
