--- a/app/src/main/res/layout/videoitem.xml
+++ b/app/src/main/res/layout/videoitem.xml
@@ -7,6 +7,7 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"
+        android:padding="4dp"
         android:id="@+id/video_item"/>
 
 </FrameLayout>
